update names/ordering for Vaer Reef

--- a/index.html
+++ b/index.html
@@ -386,19 +386,6 @@
                     <button onclick="setColor(this)">6</button>
                     <button onclick="setColor(this)">7</button>
                 </div>
-                <div id="pyrifera">
-                    <h2>
-                        <span>Pyrifera</span>
-                        <span class="chat"><i class="fa fa-heart"></i></span>
-                    </h2>
-                    <button onclick="setColor(this)">1</button>
-                    <button onclick="setColor(this)">2</button>
-                    <button onclick="setColor(this)">3</button>
-                    <button onclick="setColor(this)">4</button>
-                    <button onclick="setColor(this)">5</button>
-                    <button onclick="setColor(this)">6</button>
-                    <button onclick="setColor(this)">7</button>
-                </div>
                 <div id="clione">
                     <h2>
                         <span>Clione</span>
@@ -412,9 +399,9 @@
                     <button onclick="setColor(this)">6</button>
                     <button onclick="setColor(this)">7</button>
                 </div>
-                <div id="unk1">
+                <div id="pyrifera">
                     <h2>
-                        <span>???</span>
+                        <span>Pyrifera</span>
                         <span class="chat"><i class="fa fa-heart"></i></span>
                     </h2>
                     <button onclick="setColor(this)">1</button>
@@ -425,9 +412,22 @@
                     <button onclick="setColor(this)">6</button>
                     <button onclick="setColor(this)">7</button>
                 </div>
-                <div id="unk2">
+                <div id="poe">
                     <h2>
-                        <span>???</span>
+                        <span>Poe</span>
+                        <span class="chat"><i class="fa fa-heart"></i></span>
+                    </h2>
+                    <button onclick="setColor(this)">1</button>
+                    <button onclick="setColor(this)">2</button>
+                    <button onclick="setColor(this)">3</button>
+                    <button onclick="setColor(this)">4</button>
+                    <button onclick="setColor(this)">5</button>
+                    <button onclick="setColor(this)">6</button>
+                    <button onclick="setColor(this)">7</button>
+                </div>
+                <div id="xarion">
+                    <h2>
+                        <span>Xarion</span>
                         <span class="chat"><i class="fa fa-heart"></i></span>
                     </h2>
                     <button onclick="setColor(this)">1</button>
@@ -439,8 +439,8 @@
                     <button onclick="setColor(this)">7</button>
                 </div>
                 <div>
-                    <h2 id="unk3">
-                        <span>unk3</span>
+                    <h2 id="wras">
+                        <span>Wras</span>
                         <span class="chat"><i class="fa fa-heart"></i></span>
                     </h2>
                     <button onclick="setColor(this)">1</button>
@@ -455,7 +455,15 @@
         </div>
         <footer class="footer">
             <div class="container">
-                <span class="text-light">visual daily quest tracker by <a href="https://dappervolk.com/profile/575">fel (#575)</a> and <a href="https://dappervolk.com/profile/436">rae (#436)</a><a href="https://dappervolk.com/forum/topic/1201-visual-daily-quest-tracker">see forum</a></span>
+                <p class="text-light">
+                    visual daily quest tracker by <a href="https://dappervolk.com/profile/575">fel (#575)</a> and <a href="https://dappervolk.com/profile/436">rae (#436)</a>
+                </p>
+                <p class="text-light">
+                    fork by <a href="https://dappervolk.com/profile/321">yako (#321)</a>
+                </p>
+                <p>
+                    <a href="https://dappervolk.com/forum/topic/1201-visual-daily-quest-tracker">see forum</a>
+                </p>
             </div>
         </footer>
     </div>
