--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
     <script type="text.javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" integrity="sha384-1CmrxMRARb6aLqgBO7yyAxTOQE2AKb9GfXnEo760AUcUmFx3ibVJJAzGytlQcNXd" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/40b863a1ac.js" crossorigin="anonymous"></script>
     <script type="text/javascript" src="script.js"></script>
 </head>
 
@@ -26,7 +25,7 @@
         <!-- reset button not needed until we can create a saveState for buttons! -->
         <!-- currently this button only refreshes the page                        -->
         <div id="color">
-            <i class="fa fa-moon" title="toggle contrast"></i>
+            <i class="fas fa-moon" title="toggle contrast"></i>
         </div>
         <div id="town-list" class="accordion">
             <div class="town">
@@ -37,7 +36,7 @@
                     <div id="wizard">
                         <h2>
                             <span>Old Farmhand</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -50,7 +49,7 @@
                     <div id="lilia">
                         <h2>
                             <span>Lilia</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -63,7 +62,7 @@
                     <div id="fantasia">
                         <h2>
                             <span>Fantasia</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -76,7 +75,7 @@
                     <div id="bearnard">
                         <h2>
                             <span>Bearnard</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -89,7 +88,7 @@
                     <div id="calbet">
                         <h2>
                             <span>Calbet</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -102,7 +101,7 @@
                     <div id="buli">
                         <h2>
                             <span>Buli</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -122,7 +121,7 @@
                     <div id="glume">
                         <h2>
                             <span>Glume</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -135,7 +134,7 @@
                     <div id="mycel">
                         <h2>
                             <span>Mycel</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -148,7 +147,7 @@
                     <div id="magdalene">
                         <h2>
                             <span>Magdalene</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -161,7 +160,7 @@
                     <div id="irin">
                         <h2>
                             <span>Irin</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -174,7 +173,7 @@
                     <div id="trout">
                         <h2>
                             <span>Trout</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -187,7 +186,7 @@
                     <div id="barclay">
                         <h2>
                             <span>Barclay</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -207,7 +206,7 @@
                     <div id="cairn">
                         <h2>
                             <span>Cairn</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -220,7 +219,7 @@
                     <div id="marvel">
                         <h2>
                             <span>Marvel</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -233,7 +232,7 @@
                     <div>
                         <h2>
                             <span>Idra</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -246,7 +245,7 @@
                     <div>
                         <h2>
                             <span>Visindy</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -259,7 +258,7 @@
                     <div id="nigel">
                         <h2>
                             <span>Nigel</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -272,7 +271,7 @@
                     <div id="thomas">
                         <h2>
                             <span>Thomas & Pascal</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -292,7 +291,7 @@
                     <div id="carneau">
                         <h2>
                             <span>Carneau</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -305,7 +304,7 @@
                     <div id="johaness">
                         <h2>
                             <span>Johaness</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -318,7 +317,7 @@
                     <div id="pellier">
                         <h2>
                             <span>Pellier</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -331,7 +330,7 @@
                     <div id="lief">
                         <h2>
                             <span>Lief</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -344,7 +343,7 @@
                     <div id="astra">
                         <h2>
                             <span>Astra</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -357,7 +356,7 @@
                     <div>
                         <h2 id="celestine">
                             <span>Celestine</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -377,7 +376,7 @@
                     <div id="xarion">
                         <h2>
                             <span>Xarion</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -390,7 +389,7 @@
                     <div id="olievar">
                         <h2>
                             <span>Olievar</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -403,7 +402,7 @@
                     <div id="pyrifera">
                         <h2>
                             <span>Pyrifera</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -416,7 +415,7 @@
                     <div id="clione">
                         <h2>
                             <span>Clione</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -429,7 +428,7 @@
                     <div id="poe">
                         <h2>
                             <span>Poe</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
@@ -442,7 +441,7 @@
                     <div>
                         <h2 id="wras">
                             <span>Wras</span>
-                            <span class="chat"><i class="fa fa-heart"></i></span>
+                            <span class="chat" role="button"><i class="fas fa-heart"></i></span>
                         </h2>
                         <button onclick="setColor(this)">1</button>
                         <button onclick="setColor(this)">2</button>
